# ds-mcp-server

./: .env.example  .gitignore  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/: release.yml
.github/workflows/: publish.yml  tests.yml
src/ds_mcp_server/: __init__.py  cli.py  env_setup.py  server.py
src/ds_mcp_server/_tools/: plot_data.py  plot_interactive.py  plot_static.py  research_tools.py  sandbox.py  stats_analysis.py  system_tools.py  viz_config.py  viz_utils.py  web_tools.py
src/ds_mcp_server/agents/: __init__.py  categories.py  llm.py  protocol.py  runner.py  supervisor.py  worker.py
src/ds_mcp_server/client/: _base.py  anthropic_client.py  openai_compat.py
src/ds_mcp_server/resources/: env.template
src/ds_mcp_server/web/: __init__.py  app.py  chat.py
src/ds_mcp_server/web/static/: app.js  index.html  styles.css
tests/: conftest.py  test_agents.py  test_cli.py  test_env_setup.py  test_plot_data.py  test_plots_smoke.py  test_research_tools.py  test_sandbox.py  test_server_gating.py  test_stats_analysis.py  test_system_tools.py  test_viz_utils.py  test_web.py
