[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ds-mcp-server"
dynamic = ["version"]
description = "An MCP server exposing data science tools (plotting, stats, data exploration) to any LLM client."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Ahmad Alhineidi" }]
keywords = ["mcp", "llm", "data-science", "visualization", "plotly", "pandas"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
    "pandas>=2.0",
    "plotly>=5.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "numpy>=1.24",
    "pingouin>=0.5",
    "statsmodels>=0.14",
    "wordcloud>=1.9",
    "beautifulsoup4>=4.12",
    "ddgs>=6.0",
    "python-dotenv>=1.0",
    "openai>=1.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12",
]

[project.urls]
Homepage = "https://github.com/ahmad-zurih/ds-mcp-server"
Repository = "https://github.com/ahmad-zurih/ds-mcp-server"
"Bug Tracker" = "https://github.com/ahmad-zurih/ds-mcp-server/issues"

[project.optional-dependencies]
anthropic = ["anthropic>=0.20"]
playwright = ["playwright>=1.40"]
# The [web] extra is kept for backward compatibility but is now a no-op —
# fastapi/uvicorn/websockets ship with the base install so `ds-mcp-webui`
# works out of the box.
web = []
# [research] adds YouTube transcript support (arXiv/GitHub/Wikipedia use stdlib only)
research = ["youtube-transcript-api>=0.6"]
all = ["anthropic>=0.20", "playwright>=1.40", "youtube-transcript-api>=0.6"]
dev = [
    "pytest>=7.4",
    "openpyxl>=3.1",
    "httpx>=0.27",
]

[project.scripts]
ds-mcp-server = "ds_mcp_server.cli:serve"
ds-mcp-client = "ds_mcp_server.cli:chat"
ds-mcp-webui = "ds_mcp_server.cli:webui"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ds_mcp_server.web" = ["static/*", "static/**/*"]
"ds_mcp_server.resources" = ["env.template"]

[tool.setuptools_scm]
# Version is derived from the latest git tag (e.g. tag "v0.2.0" -> version "0.2.0").
# On untagged commits, produces a dev version like "0.2.1.dev3+g1a2b3c4".
# Write the resolved version into the built package so `importlib.metadata` can read it.
version_file = "src/ds_mcp_server/_version.py"
# Prefer clean release versions on tagged commits; use PEP 440 dev scheme in between.
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
